# TenshiEngine

./: .gitignore  AnimationComponent_8hpp_source.html  AnimationSystem_8cpp.html  AnimationSystem_8hpp.js  AnimationSystem_8hpp_source.html  Animation_8hpp_source.html  BackgroundManager_8hpp_source.html  CHANGELOG.md  CMakeLists.txt  CameraManager_8hpp_source.html  Camera_8hpp_source.html  ColliderComponent_8hpp.js  ColliderComponent_8hpp_source.html  Collider_8hpp_source.html  Component_8hpp.js  Component_8hpp_source.html  Components_8hpp_source.html  Config_8hpp_source.html  DebugRenderSystem_8hpp.js  DebugRenderSystem_8hpp_source.html  DefaultTexture_8h_source.html  Doxyfile  Entity_8hpp.html  Entity_8hpp.js  Entity_8hpp_source.html  GameBase_8cpp.html  GameBase_8hpp.js  GameBase_8hpp_source.html  GroundedComponent_8hpp.js  GroundedComponent_8hpp_source.html  Grounded_8hpp_source.html  HealthComponent_8hpp.js  HealthComponent_8hpp_source.html  Health_8hpp_source.html  HorizontalMovementComponent_8hpp_source.html  HorizontalMovement_8hpp_source.html  InputSystem_8cpp.html  InputSystem_8hpp.html  InputSystem_8hpp_source.html  JumpComponent_8hpp.html  (+323 more)
cmake/: TenshiEngineConfig.cmake.in  version.h.in
html/: AnimationComponent_8hpp.html  AnimationComponent_8hpp.js  AnimationSystem_8hpp.html  AnimationSystem_8hpp_source.html  ColliderComponent_8hpp.html  Component_8hpp.html  Components_8hpp.html  Components_8hpp_source.html  DebugRenderSystem_8cpp.html  DebugRenderSystem_8hpp.html  DebugRenderSystem_8hpp_source.html  Entity_8hpp_source.html  GameBase_8hpp.html  GroundedComponent_8hpp.html  HealthComponent_8hpp.html  HealthComponent_8hpp_source.html  HorizontalMovementComponent_8hpp.html  HorizontalMovementComponent_8hpp.js  InputSystem_8hpp.js  JumpComponent_8hpp.js  Logger_8cpp.html  Logger_8hpp.html  MovementSystem_8cpp.html  MovementSystem_8hpp.html  MovementSystem_8hpp.js  MovementSystem_8hpp_source.html  NameComponent_8hpp.html  NameComponent_8hpp.js  NameComponent_8hpp_source.html  PhysicsSystem_8cpp.html  PhysicsSystem_8hpp.html  PhysicsSystem_8hpp.js  PlayerInputComponent_8hpp.html  PlayerStateComponent_8hpp.html  (+81 more)
(+446 files in other folders)
